vinli docs scafolding

--- a/css/base.css
+++ b/css/base.css
@@ -3114,6 +3114,7 @@ Alternate exists for:
 .fill-teal        { background-color:#41afa5; }
 .fill-pink        { background-color:#ed6498; }
 .fill-mustard     { background-color:#fbb03b; }
+.vinli-dev-green  { background-color:#00ab83; }
 
 .fill-darken0 { background:rgba(0,0,0,0.05); }
 .fill-darken1 { background:rgba(0,0,0,0.25); }
